# eros-core-python

./: .gitignore  LICENCE  RSP.py  SerialSimulator.py  Workspace.code-workspace  bles.py  crc8.py  eros.py  eros_cli_client_test.py  eros_drv_serial.py  eros_drv_tcp.py  eros_drv_udp.py  eros_layers.py  eros_transport_loopback.py  eros_transport_serial.py  eros_transport_serial_sim.py  eros_transport_tcp.py  eros_transport_udp.py  interactive_serial.py  log_color.py  main.py  packet_transport_simulator.py  packeteiser.py  pyproject.toml  pytest.ini  readme.md  requirements.txt  stream_simulator.py  test_eros.py  test_eros_layers.py  test_eros_perf.py  test_multi.py  test_simple.py  test_udp.py
.gitea/workflows/: another.yaml  demo.yaml
.github/workflows/: python-app.yml  test_installation.yml
demo/: demo_interactive_serial.py  demo_serial_logging.py
examples/: eros_cli.py  eros_cli_client.py  eros_cli_client_test.py  eros_zmq_test.py  log_color.py  package_test.py
old/: test_multi.py  test_simple.py  test_tcp.py  test_udp.py
other/: log_color.py
src/Eros.egg-info/: PKG-INFO  SOURCES.txt
src/Eros_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/eros/: __init__.py  eros_layers.py  eros_terminal.py  eros_transport_loopback.py  eros_transport_serial.py  eros_transport_serial_sim.py  eros_transport_tcp.py  eros_transport_udp.py  eros_transport_udp_sim.py  eros_transport_zmq.py  main.py
src/eros_core/: __init__.py  eros_analytics.py  eros_layers.py  eros_terminal.py  main.py
tests/: tcp_echo.py  test_drv_tcp.py  test_drv_uart.py  test_drv_udp.py  test_eros.py  test_eros_layers.py  test_eros_perf.py  test_perf.py
(+9 files in other folders)
