[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Eros"
version = "0.5.1"
authors = [
  { name="Floris Vernieuwe", email="floris@vernieuwe.eu" },
]
description = "EROS Package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'cobs==1.2.0',
    'pyserial==3.5',
    'bitstruct==8.17.0'
]