[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eros_core"
version = "0.8.0"
authors = [
  { name="Floris Vernieuwe", email="floris@vernieuwe.eu" },
]
description = "EROS-core Package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'cobs==1.2.0',
    'pyserial==3.5',
    'bitstruct==8.17.0'
]