[tool.poetry]
name = "eros_core"
version = "0.1.0"
description = ""
authors = ["floris vernieuwe <floris@vernieuwe.eu>"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.10"
cobs = "1.2.0"
pyserial = "3.5"
bitstruct = "8.17.0"
pyzmq = "25.1.0"


[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry.scripts]
eros = "eros_cli:cli"